# Grape

./: .gitignore  CMakeLists.txt  README.md  commit.py  install.sh  no.txt
depends/libsnark/: CMakeLists.txt
include/: Hyrax.cuh  ec_operation.cuh  fr-tensor.cuh  g1-tensor.cuh  host_affine.cuh  ioutils.cuh  lasso.cuh  msm.cuh  polynomial.cuh  prove.cuh  rescaling.cuh  timer.cuh  tlookup.cuh
include/curve/: affine_t.cuh  curve_common.cuh  jacobian_t.cuh  xyzz_t.cuh
include/field/: alt_bn128.cuh  bls12-381.cuh  mont_t.cuh  pow.cuh
llama/llama/: model.py
src/: Hyrax.cu  ec_operation.cu  fr-tensor.cu  g1-tensor.cu  ioutils.cu  polynomial.cu  prove.cu  rescaling.cu  timer.cu  tlookup.cu
test/: HyraxTest.cu  combine_value.cu  commit.cu  eleWiseMul.cu  llm.cu  matmul.cu  ppgen.cu  sumcheckTest.cu  tlookupMapTest.cu  tlookupTest.cu
zzllama/: example_text_completion.py
zzllama/llama/: model.py
